--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,58 @@
+# Python
 __pycache__/
 *.pyc
 *.pyo
+*.pyd
+.Python
+*.so
+
+# Testing
 .pytest_cache/
 .coverage
 htmlcov/
+.tox/
+.nox/
+
+# Build/Distribution
 dist/
 build/
 *.egg-info/
+*.egg
+.eggs/
+
+# Virtual environments
 .venv/
 venv/
-.env
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.local
+*.local
+
+# Beads (local issue tracking)
+.beads/beads.db
+.beads/beads.db-shm
+.beads/beads.db-wal
+.beads/daemon.lock
+.beads/daemon.log
+.beads/last-touched
+.beads/.local_version
+
+# Claude Code
+.claude/
+
+# Logs
+*.log
+/tmp/
