--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kata-workspace"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Terminal-centric workspace orchestrator for tmux"
 requires-python = ">=3.10"
 license = { text = "MIT" }
@@ -49,8 +49,17 @@ Repository = "https://github.com/kata-workspace/kata"
 Issues = "https://github.com/kata-workspace/kata/issues"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
+local_scheme = "no-local-version"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "kata/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["kata"]
