fix(lint): resolve ruff linting and formatting errors
- Remove unused imports across kata/ and tests/
- Fix import sorting (isort)
- Update type annotations to use X | None syntax
- Add future annotations for forward references
- Add B008, B904 to ruff ignore list (common Typer patterns)
- Format all files with ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,8 @@ select = [
 ]
 ignore = [
     "E501",  # line too long (handled by formatter)
+    "B008",  # function call in default argument (common Typer pattern)
+    "B904",  # raise from within except (often not needed for CLI exit codes)
 ]
 
 [tool.ruff.lint.isort]
